# phoneStore_fastAPI

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_02_1709-71541ffdcacc_create_tables.py  2024_05_02_1719-8dc4f07b252a_create_table_users.py  2024_05_02_1726-7586851476b5_create_table_users.py  2024_05_03_1015-57aeac1ef1e9_add_tags.py  2024_05_03_1027-4a0968179297_add_many_to_many.py  2024_05_03_1037-290f4591085c_fixed_many_to_many.py  2024_05_05_1858-e794ac6001a9_user_fixes.py  2024_05_05_2018-f401365a6e35_user_fixes.py  2024_05_29_1156-5ed0c736f02d_.py
auth/: jwt_auth.py  utils.py
core/: __init__.py  config.py  db_helper.py  exceptions.py
core/models/: __init__.py  category.py  db_helper.py  phone.py  phone_tag_association.py  tag.py  user.py
products/: crud.py  dependencies.py  schemas.py  views.py
redis_tools/: tools.py
users/: crud.py  schemas.py  views.py
