[tool.poetry]
name = "phonestore-fastapi"
version = "0.1.0"
description = ""
authors = ["Aleksey Cherniaev <cherniaevaleksey2304@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.3"}
alembic = "^1.13.1"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.29"}
asyncpg = "^0.29.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
